# fm

./: .gitignore  Cargo.toml  README.md  build.rs
client/: main.rs
desktop/: config.toml  fm.desktop  fm.zsh
desktop/man/: fm.1  fm.scd  generate.sh
proto/: server.proto
server/: main.rs
src/: application.rs  config.rs  files.rs  main.rs  tests.rs
