[package]
default-run = "fm"
edition = "2021"
name = "fm"
version = "1.0.0"

[[bin]]
name = "fm"
path = "src/main.rs"

[[bin]]
name = "fm-server"
path = "server/main.rs"

[[bin]]
name = "fm-client"
path = "client/main.rs"

[profile]
dev = { opt-level = 0, debug = true }
release = { opt-level = 3, debug = false }

[dependencies]
anyhow = "1.0.81"
byteorder = "1.5.0"
bytes = "1.6.0"
clap = { version = "4.5.4" }
crossterm = { version = "0.27", features = ["event-stream"] }
dirs = "5.0.1"
env_logger = "0.11.3"
fs4 = { version = "0.8.1" }
futures = "0.3.30"
git2 = "0.18.3"
log = "0.4.21"
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
subprocess = "0.2.9"
sysinfo = "0.30.7"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tui = { git = "https://github.com/dcompoze/tui", branch = "custom", default-features = true }
walkdir = "2.5.0"
whoami = "1.5.1"

[build-dependencies]
prost-build = "0.12"
