[package]
default-run = "fm"
edition = "2021"
name = "fm"
version = "1.0.0"

[[bin]]
name = "fm"
path = "src/main.rs"

[[bin]]
name = "fm-server"
path = "server/main.rs"

[[bin]]
name = "fm-client"
path = "client/main.rs"

[profile]
dev = { opt-level = 0, debug = true }
release = { opt-level = 3, debug = false }

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
bytes = "1.7.2"
clap = { version = "4.5.18" }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5.0.1"
env_logger = "0.11.5"
fs4 = { version = "0.9.1" }
futures = "0.3.30"
git2 = "0.19.0"
log = "0.4.22"
prost = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
subprocess = "0.2.9"
sysinfo = "0.31.4"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tui = { git = "https://github.com/dcompoze/tui", branch = "custom", default-features = true }
walkdir = "2.5.0"
whoami = "1.5.2"

[build-dependencies]
prost-build = "0.13"
